# thymio_description

./: CMakeLists.txt
thymio/: thymio.urdf
thymio/urdf/: thymio.sdf
